--- a/app/globals.css
+++ b/app/globals.css
@@ -2,32 +2,80 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
+@layer base {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --background: 243 100% 98.26%;
+    --foreground: 243 10% 0.52%;
+
+    --muted: 243 10% 91.3%;
+    --muted-foreground: 243 5% 41.3%;
+
+    --popover: 243 10% 91.3%;
+    --popover-foreground: 243 10% 0.65%;
+
+    --card: 243 10% 91.3%;
+    --card-foreground: 243 10% 0.65%;
+
+    --border: 243 15% 89.52%;
+    --input: 243 15% 89.52%;
+
+    --primary: 243 100% 13%;
+    --primary-foreground: 243 2% 91.3%;
+
+    --secondary: 243 5% 95.65%;
+    --secondary-foreground: 243 7% 11.3%;
+
+    --accent: 243 5% 95.65%;
+    --accent-foreground: 243 7% 11.3%;
+
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 0 0% 98%;
+
+    --ring: 243 100% 13%;
+
+    --radius: 0.5rem;
+  }
+
+  .dark {
+    --background: 227 44.2% 4.48%;
+    --foreground: 227 6.800000000000001% 97.8%;
+
+    --muted: 227 34% 16.8%;
+    --muted-foreground: 227 6.800000000000001% 55.6%;
+
+    --popover: 227 51.4% 7.280000000000001%;
+    --popover-foreground: 227 6.800000000000001% 97.8%;
+
+    --card: 227 51.4% 7.280000000000001%;
+    --card-foreground: 227 6.800000000000001% 97.8%;
+
+    --border: 227 34% 16.8%;
+    --input: 227 34% 16.8%;
+
+    --primary: 227 68% 56%;
+    --primary-foreground: 227 6.800000000000001% 5.6000000000000005%;
+
+    --secondary: 227 34% 16.8%;
+    --secondary-foreground: 227 6.800000000000001% 97.8%;
+
+    --accent: 227 34% 16.8%;
+    --accent-foreground: 227 6.800000000000001% 97.8%;
+
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: 227 6.800000000000001% 97.8%;
+
+    --ring: 227 68% 56%;
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+@layer base {
+  * {
+    @apply border-border;
+  }
+  html {
+    @apply size-full overflow-hidden;
+  }
+  body {
+    @apply grid size-full grid-cols-[1fr] grid-rows-[auto_1fr_auto] overflow-x-hidden bg-background font-sans text-foreground antialiased;
   }
 }
